make icon in style 2 bigger

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="infor-2">
                 <div class="block1-2">
                     <div class="icon-bl1-2">
-                        <i class="fa-solid fa-lightbulb"></i>
+                        <i class="fa-solid fa-lightbulb" id="icon-bl1-2"></i>
                     </div>
                     <div class="head-bl1-2">
                         <h3>Management</h3>
@@ -86,7 +86,7 @@
                 </div>
                 <div class="block2-2">
                     <div class="icon-bl2-2">
-                        <i class="fa-solid fa-atom"></i>
+                        <i class="fa-solid fa-atom" id="icon-bl2-2"></i>
                     </div>
                     <div class="head-bl2-2">
                         <h3>Customer Support</h3>
@@ -105,7 +105,7 @@
                 </div>
                 <div class="block3-2">
                     <div class="icon-bl3-2">
-                        <i class="fa-solid fa-handshake"></i>
+                        <i class="fa-solid fa-handshake" id="icon-bl3-2"></i>
                     </div>
                     <div class="head-bl3-2">
                         <h3>Collaborative</h3>
