add effect and fix color

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         </p>
                     </div>
                     <div class="para2-bl1-2">
-                        Learn More
+                        <a href="">Learn More</a>
                     </div>
                 </div>
                 <div class="block2-2">
@@ -100,7 +100,7 @@
                         </p>
                     </div>
                     <div class="para2-bl2-2">
-                        Learn More
+                        <a href="">Learn More</a>
                     </div>
                 </div>
                 <div class="block3-2">
@@ -119,7 +119,7 @@
                         </p>
                     </div>
                     <div class="para2-bl3-2">
-                        Learn More
+                        <a href="">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -142,7 +142,7 @@
                     </p>
                 </div>
                 <div class="para2-3">
-                    Learn more
+                    <a href="">Learn More</a>
                 </div>
             </div>
             <div class="pic-3">
@@ -242,8 +242,8 @@
                         <p>Only 2 Operators</p>
                         <p>Abandoned Cart </p>
                         <p>Facebook & Instagram Ads</p>
-                        <p>Order Notifications</p>
-                        <p>Landing Pages</p>
+                        <p class="efp-bl-6">Order Notifications</p>
+                        <p class="efp-bl-6">Landing Pages</p>
                     </div>
                     <div class="button-bl1-6">
                         Order Now
@@ -279,7 +279,7 @@
                         <p>Abandoned Cart </p>
                         <p>Facebook & Instagram Ads</p>
                         <p>Order Notifications</p>
-                        <p>Landing Pages</p>
+                        <p class="efp-bl-6">Landing Pages</p>
                     </div>
                     <div class="button-bl2-6">
                         Order Now
@@ -328,13 +328,13 @@
         <!-- Nội dung của phần Contact -->
         <div class="container-7">
             <div class="main1-7">
-                <h1 class="headline-7">SUBSCRIBER</h1>
+                <h1 class="headline-7">SUBSCRIBE</h1>
                 <div class="para1-7">Subscribe to get exclusive news & offer</div>
                 <div class="info-7">
                     <div class="input-text-7">
                         <input type="text" class="email-input-7" placeholder="Enter Your Adress Email">
                     </div>
-                    <div class="button-sup-7">SUBSCRIBER</div>
+                    <div class="button-sup-7">SUBSCRIBE</div>
                 </div>
             </div>
             <div class="main2-7">
@@ -363,17 +363,19 @@
                     </div>
                     <div class="phone-7">
                         <i class="fa-solid fa-mobile-screen-button"></i>
-                        <div class="number-7">(239) 555-0108</div>
+                        <div class="number-7">
+                            <a href="tel:+12395550108">(239) 555-0108</a>
+                        </div>                        
                     </div>
                     <div class="social-7">
                         <div class="twitter-7">
-                            <i class="fa-brands fa-twitter"></i>
+                            <i class="fa-brands fa-twitter" id="twitter"></i>
                         </div>
                         <div class="facebook-7">
-                            <i class="fa-brands fa-square-facebook"></i>
+                            <i class="fa-brands fa-square-facebook " id="facebook"></i>
                         </div>
                         <div class="in-7">
-                            <i class="fa-brands fa-invision"></i>
+                            <i class="fa-brands fa-invision" id="intar"></i>
                         </div>
                     </div>
                 </div>
