change text when min-width <1060px

--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@
                     <h1>features and</h1>
                     <h1>Variable fonts</h1>
                 </div>
+                <div class="headline2-3">
+                    <h1>Perfect for Operations</h1>
+                    <h1>HR and Finance</h1>
+                </div>
                 <div class="paragraphe-3">
                     <p>Most calendars are designed for teams.
                         Slate is designed for freelancers who
