--- a/index.html
+++ b/index.html
@@ -41,15 +41,10 @@
         <div class="mobile-dv">
             <div class="info">
                 <div class="headline">
-                    <div class="first-head">
-                        <p>Find the Best </p>
-                        <p>Solution</p> 
-                    </div>
-                    <p>in Seconds</p>
+                    <p>Find the Best Solution in Seconds</p>
                 </div>
                 <div class="para">
-                    <p>If debugging is the process of removing</p>
-                    <p>software bugs.</p>
+                    <p>If debugging is the process of removing software bugs.</p>
                 </div>
             </div>
             <div class="button">
@@ -134,13 +129,10 @@
         <div class="container-3">
             <div class="infor-3">
                 <div class="headline-3">
-                    <h1>OpenType</h1>
-                    <h1>features and</h1>
-                    <h1>Variable fonts</h1>
+                    <h1>OpenType features and Variable fonts</h1>
                 </div>
                 <div class="headline2-3">
-                    <h1>Perfect for Operations</h1>
-                    <h1>HR and Finance</h1>
+                    <h1>Perfect for Operations HR and Finance</h1>
                 </div>
                 <div class="paragraphe-3">
                     <p>Most calendars are designed for teams.
@@ -163,8 +155,7 @@
         <div class="container-4">
             <div class="infor-4">
                 <div class="headline-4">
-                    <h1>Quick & Easy</h1>
-                    <h1>Process</h1>
+                    <h1>Quick & Easy Process</h1>
                 </div>
                 <div class="paragraphe-4">
                     <p>Most calendars are designed for teams.
@@ -188,9 +179,7 @@
         <div class="container-5">
             <div class="infor-5">
                 <div class="headline-5">
-                    <h1>Perfect solution</h1>
-                    <h1>for small</h1>
-                    <h1>businesse</h1>
+                    <h1>Perfect solution for small businesse</h1>
                 </div>
                 <div class="paragraphe-5">
                     <p>Being a freelancer is a
